2005-02-07  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-expandItem:expandChildren:,
	collapseItem:collapseChildren:): Added a call to setNeedsDisplay:,
	so the new status will be shown correctly.
	(_openItem:): Removed setNeedsDisplay: call as all callers do it already.

2005-02-05 15:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDataLinkManager.h: Moved NSDataLinkManager delegate
	methods to an informal protocol NSDataLinkManagerDelegate.
	* Source/Functions.m: Implemented NSFrameLinkRect() to draw the frames
	around source and destination links.
	* Source/NSBundleAdditions.m: Modified -description method in 
	NSNibConnector to display the source, destination and label for the
	connection.  This makes it easier to debug.
	* Source/NSDataLink.m: Implemented a few private methods.
	* Source/NSDataLinkManager.m: Implemented -breakAllLinks.

2005-02-03 10:54  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSImage.m (min, max): Rename to ...
	(gs_min, gs_max): ... this. Update callers.

2005-01-28 21:58 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSColorWell.m: [NSColorWell mouseDown:] prevent use
	of the colorwell when it's disabled.

2005-01-28 17:57  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSImageCell.m (-drawInteriorWithFrame:inView:): If our
	view is flipped, flip the image.

2005-01-26 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSApplication.m (-beginModalSessionforWindow:): Center
	panels only if they are not already up, matching OS X Panther;
	document.
	(-runModalForWindow:, -runModalSession:): Clarify documentation.

2005-01-25 01:05  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSImageCell.m (-drawInteriorWithFrame:inView:): Use
	-drawInRect:fromRect:operation:fraction: to draw the image.

2005-01-25 00:29  Alexander Malmberg  <alexander@malmberg.org>

	* Headers/AppKit/NSImage.h (-drawAtPoint:fromRect:fraction:)